--- a/sls/serverless.yml
+++ b/sls/serverless.yml
@@ -36,9 +36,10 @@ functions:
 
 plugins:
   - serverless-python-requirements
+  - serverless-plugin-log-retention
 
 custom:
   pythonRequirements:
     dockerizePip: true
-
+  logRetentionInDays: 30
 
